service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dummy
  name: dummy
spec:
  ports:
  - port: 123
    protocol: TCP
    targetPort: 123
  selector:
    name: dummy
  type: ClusterIP
