route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dummy
spec:
  host: placeholder
  port:
    targetPort: 123
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: dummy
    weight: 100
